Opened 19 years ago

Closed 19 years ago

Last modified 19 years ago

#349 closed bug (fixed)

get_memory_map() must be lockless to be used in interrupts

Reported by: umccullough Owned by: axeld
Priority: blocker Milestone: R1
Component: System/Kernel Version:
Keywords: Cc: diver, j_freeman@…, imre.lorvi@…
Blocked By: Blocking:
Platform: All

Description

Using Haiku hrev16870 I was able to configure an sis900 interface using ifconfig and set up a route.

When I launch NetPositive and use http://192.168.254.1 in the address bar and hit enter, it immediately KDLs with:

PANIC: recursive_lock_lock: called with interrupts disabled for lock 0x9076e020, sem 0x3

100% reproducible every time here

Machine: Via C3 Ezra 800mhz with SiS chipsets and 512mb RAM

I will attach a full debug output with the stack crawl.

Attachments (1)

haiku_16870_sis900_NetPositive_KDL.log (43.5 KB ) - added by umccullough@… 19 years ago.
Debug output with KDL and stackcrawl

Download all attachments as: .zip

Change History (11)

by umccullough@…, 19 years ago

Debug output with KDL and stackcrawl

comment:1 by axeld, 19 years ago

severity: normalblocker

comment:2 by diver, 19 years ago

Cc: diver added

comment:3 by j_freeman@…, 19 years ago

Cc: j_freeman@… added

comment:4 by umccullough@…, 19 years ago

Just a note to add related #536 in ipro1000 driver

comment:5 by axeld, 19 years ago

Summary: NetPositive KDLs with sis900 driver: recursive_lock_lock errorget_memory_map() must be lockless to be used in interrupts

comment:6 by axeld, 19 years ago

* Bug 536 has been marked as a duplicate of this bug. *

comment:7 by axeld, 19 years ago

Cc: imre.lorvi@… added

comment:8 by axeld, 19 years ago

Fixed in hrev17280.

comment:9 by axeld, 19 years ago

Resolution: fixed

comment:10 by axeld, 19 years ago

Status: newclosed
Note: See TracTickets for help on using tickets.