Implemented quite a hack to solve the lockless get_memory_map() problem (bug #349): when called with interrupts turned off, get_memory_map() will now call the new vm_translation_map_ops::query_interrupt() call. Under PPC, this is trivial (at least right now), but on x86 we need to make sure we have access to the page table entry, ie. we need to create an area that points to its own page table entry, so that we can map in the page table entry containing the address we're looking for. It's not really nice, feel free to come up with a cleaner solution :-)

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@17280 a95241bf-73f2-0310-859d-f6bbb57e9c96