headers/private/kernel/vm_translation_map.h
@@ -1,10 +1,10 @@
 /*
-** Copyright 2002-2004, The Haiku Team. All rights reserved.
-** Distributed under the terms of the Haiku License.
-**
-** Copyright 2001-2002, Travis Geiselbrecht. All rights reserved.
-** Distributed under the terms of the NewOS License.
-*/
+ * Copyright 2002-2006, Haiku. All rights reserved.
+ * Distributed under the terms of the MIT License.
+ *
+ * Copyright 2001-2002, Travis Geiselbrecht. All rights reserved.
+ * Distributed under the terms of the NewOS License.
+ */
 #ifndef KERNEL_VM_TRANSLATION_MAP_H
 #define KERNEL_VM_TRANSLATION_MAP_H
 
@@ -27,12 +27,13 @@ typedef struct vm_translation_map {
 
 // table of operations the vm may want to do to this mapping
 typedef struct vm_translation_map_ops {
-	void (*destroy)(vm_translation_map *);
-	status_t (*lock)(vm_translation_map*);
-	status_t (*unlock)(vm_translation_map*);
+	void (*destroy)(vm_translation_map *map);
+	status_t (*lock)(vm_translation_map *map);
+	status_t (*unlock)(vm_translation_map *map);
 	status_t (*map)(vm_translation_map *map, addr_t va, addr_t pa, uint32 attributes);
 	status_t (*unmap)(vm_translation_map *map, addr_t start, addr_t end);
 	status_t (*query)(vm_translation_map *map, addr_t va, addr_t *_outPhysical, uint32 *_outFlags);
+	status_t (*query_interrupt)(vm_translation_map *map, addr_t va, addr_t *_outPhysical);
 	addr_t (*get_mapped_size)(vm_translation_map*);
 	status_t (*protect)(vm_translation_map *map, addr_t base, addr_t top, uint32 attributes);
 	status_t (*clear_flags)(vm_translation_map *map, addr_t va, uint32 flags);
